--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon main.js",
-    "start": "node generate-data.js && node main.js ",
+    "start": " node main.js ",
     "test": "node generate-data.js"
   },
   "author": "",
