--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon main.js",
-    "start": " node main.js ",
-    "test": "node generate-data.js"
+    "start": " node main.js "
   },
   "author": "",
   "license": "ISC",
